...
                }
                
               // Section creates a "white glove around all input fields
                // Uses divide fields
                Section(header: Text("Book Details")){
                    // a plain text field
                    TextField("Title of the book", text: $viewModel.title)
                    TextField("Author", text: $viewModel.author)
                    Picker("Genre", selection: $viewModel.genre){
                        ForEach(Genre.allCases, id: \.self) {
                            genre in Text(genre.rawValue).tag(genre)
                        }
                    }
...
                    TextEditor(text: $viewModel.review)
                        .frame(height: 150)
                }
            }.navigationBarTitle(viewModel.getTitleText())
                .toolbar{
                    ToolbarItem(placement: .confirmationAction){
                        Button("Save Book"){
                            viewModel.save(modelContext: modelContext)
                            
                            
                            dismiss()
                        }.disabled(!viewModel.hasUnsavedChanges)
        
...
